# global-trust-authority

./: .dockerignore  .env  .env.dev  .env.rpm  .gitignore  Cargo.toml  Dockerfile  README.en.md  README.md  docker-compose.yaml  docker-entrypoint.sh  init.sql  logging.yaml  rustfmt.toml  server_config.yaml  server_config_dev.yaml  server_config_rpm.yaml
.cargo/: config.toml
KeyManager/: .env  Cargo.toml  Dockerfile  test_data_generator.sh
KeyManager/script/: KeyManager.sh  RA.sh  generate_test_data.sh  key_manager.spec  rpm_build.sh  test_certificate_generation.sh  test_data_generator.sh
KeyManager/src/: config.rs  constants.rs  lib.rs  main.rs
KeyManager/src/controller/: cipher_controller.rs  mod.rs
KeyManager/src/key_manager/: base_key_manager.rs  mod.rs  openbao_command.rs  openbao_service.rs  secret_manager_factory.rs
KeyManager/src/key_manager/openbao/: mod.rs  openbao_command.rs  openbao_manager.rs  openbao_service.rs
KeyManager/src/models/: cipher_models.rs
KeyManager/src/utils/: env_setting_center.rs  errors.rs  logger.rs  mod.rs  response.rs
KeyManager/tests/controller/: mod.rs
attestation_agent/agent/: Cargo.toml
attestation_agent/agent/src/: load_plugins.rs  main.rs  scheduler.rs
attestation_agent/agent_restful/: Cargo.toml
attestation_agent/agent_restful/src/: get_evidence_controller.rs  lib.rs  response_error.rs  rest.rs  token_controller.rs
attestation_agent/agent_restful/src/middlewares/: mod.rs  rate_limit.rs  request_logger.rs  security_headers.rs  trusted_proxies.rs
attestation_agent/attester/tpm/boot/: Cargo.toml
attestation_agent/attester/tpm/dim/: Cargo.toml
attestation_agent/challenge/: Cargo.toml
attestation_agent/challenge/src/: challenge.rs  challenge_error.rs  evidence.rs  lib.rs  nonce_util.rs  process_lock.rs  token.rs  token_fmt.rs
attestation_agent/challenge/tests/: test_challenge.rs  test_evidence.rs
attestation_agent/utils/: Cargo.toml
attestation_agent/utils/src/: agent_error.rs  client.rs  lib.rs  load_plugins.rs  validate.rs
attestation_cli/: Cargo.toml
attestation_cli/src/: commands.rs  entities.rs  main.rs
attestation_common/schedule_job/: Cargo.toml
attestation_common/schedule_job/src/: lib.rs  scheduler.rs  task.rs
attestation_server/api/: Cargo.toml
attestation_server/api/src/: main.rs
attestation_server/api/src/controllers/: attestation_controller.rs  mod.rs  test_controller.rs  token_controller.rs
attestation_server/api/src/middlewares/: mod.rs  mq.rs
attestation_server/api/src/routes/: mod.rs
attestation_server/api/src/utils/: env_setting_center.rs  mod.rs
attestation_server/attestation/: Cargo.toml
attestation_server/attestation/src/: constants.rs  lib.rs
attestation_server/attestation/src/entities/: attest_request.rs  mod.rs  token_response.rs
attestation_server/attestation/src/error/: attestation_error.rs  mod.rs
attestation_server/attestation/src/facade/: attestation_facade.rs  mod.rs
attestation_server/attestation/src/factory/: mod.rs  token_factory.rs
attestation_server/attestation/src/handler/: default_handler.rs  mod.rs  token_handler.rs
attestation_server/attestation/src/service/: attest_service.rs  challenge_service.rs  mod.rs
attestation_server/attestation/src/strategy/: attestation_strategy.rs  mod.rs
attestation_server/attestation/tests/: test_attest_service.rs  test_challenge_service.rs  test_default_handler.rs
attestation_server/nonce/: Cargo.toml
attestation_server/nonce/src/: error.rs  lib.rs  nonce_interface.rs
attestation_server/policy/: Cargo.toml
attestation_server/policy/src/: signature_update.rs
attestation_server/policy/tests/: policy_repository_test.rs  policy_service_test.rs
attestation_server/register/: Cargo.toml
attestation_server/register/src/: apikey.rs  filter.rs
attestation_server/verifier/ascendnpu/: Cargo.toml
attestation_server/verifier/common/: Cargo.toml
attestation_server/verifier/virtCCA/: Cargo.toml
attestation_service/attestation_service/: Cargo.toml
attestation_service/attestation_service/src/: main.rs
attestation_service/endorserment/: Cargo.toml
attestation_service/endorserment/src/: lib.rs
attestation_service/endorserment/tests/: test_cert_repository.rs  test_cert_service.rs
attestation_service/key_management/: Cargo.toml
attestation_service/key_management/src/: config.rs  lib.rs
attestation_service/nonce/: Cargo.toml
attestation_service/nonce/src/: lib.rs  nonce_interface.rs
attestation_service/ref_value/: Cargo.toml
attestation_service/ref_value/src/: lib.rs
attestation_service/ref_value/tests/: test_rv_dtl_db_repo.rs
attestation_service/resource_provider/: Cargo.toml
attestation_service/resource_provider/src/: error.rs  lib.rs
attestation_service/server_config/: Cargo.toml
attestation_service/server_config/src/: lib.rs
attestation_service/server_config/tests/: config_test.rs
attestation_service/token_management/: Cargo.toml
attestation_service/token_management/src/: lib.rs  token_entity.rs  token_error.rs  token_manager.rs
attestation_service/token_management/tests/: test_token_manager.rs
key_manager/: .env  Cargo.toml  Dockerfile  README.md
key_manager/script/: generate_test_data.sh  key_manager.spec  rpm_build.sh  test_certificate_generation.sh
key_manager/src/: config.rs  constants.rs  lib.rs  main.rs
key_manager/src/controller/: cipher_controller.rs  mod.rs
key_manager/src/key_manager/: base_key_manager.rs  mod.rs  secret_manager_factory.rs
key_manager/src/models/: cipher_models.rs  mod.rs
key_manager/src/utils/: env_setting_center.rs  errors.rs  logger.rs  mod.rs  response.rs
key_manager/tests/: generate_test_key_file.sh  mod.rs  test_base_key_manager.rs  test_key_manager_put.rs  test_openbao_command.rs
key_manager/tests/testdata/: .env
plugin_manager/: Cargo.toml
plugin_manager/src/: host_functions.rs  init_plugin.rs  lib.rs  manager.rs  traits.rs
plugin_manager/tests/: plugin_manager_tests.rs
plugin_manager/tests/mock_plugin_for_service/: Cargo.toml
plugin_manager/tests/test_plugin_for_service/: Cargo.toml
(+546 files in other folders)
