[package]
name = "KeyManager"
version = "0.1.0"
edition = "2024"

[dependencies]
# web框架
actix-web = { version = "4.0", features = ["openssl"] }
tokio="1.43.0"
# 文件上传
actix-multipart="0.7.2"
# json序列化工具
serde="1.0.217"
serde_json="1.0.138"
# 日志框架
log="0.4.25"
log4rs="1.3.0"
# tls集成
openssl = { version = "0.10.45" }

dotenv = "0.15"

walkdir = "2.5.0"

# 错误处理
thiserror = "1.0"
