[package]
name = "key_managerd" # Key manager Service
version = "0.1.0"
edition = "2024"
default-run = "key_managerd"

[[bin]]
name = "key_manager"  # key manager CLI tool
path = "src/bin/cli/main.rs"

[dependencies]
# web框架
actix-web = { version = "4.0", features = ["openssl"] }
# json序列化工具
serde="1.0.217"
serde_json="1.0.138"
# 日志框架
log="0.4.25"
log4rs="1.3.0"
# tls集成
openssl = { version = "0.10.45" }
dotenv = "0.15"
# 错误处理
thiserror = "1.0"
# 数据校验
validator = { version = "0.20.0", features = ["derive"] }
# 命令行参数处理
clap = { version = "4.5.31", features = ["derive"] }