[package]
name = "attestation_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap.workspace = true
tokio.workspace = true
reqwest.workspace = true
reqwest.features = ["rustls-tls", "json"]
reqwest.default-features = false
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
config = { path = "../attestation_agent/config" }
lazy_static.workspace = true
agent_utils = { path = "../attestation_agent/utils", features = ["client"] }
challenge = { path = "../attestation_agent/challenge" }
serde_yaml.workspace = true
