[package]
name = "key_managerd" # Key manager Service
version = "0.1.0"
edition = "2021"
default-run = "key_managerd"

[[bin]]
name = "key_manager"  # key manager CLI tool
path = "src/bin/cli/main.rs"

[dependencies]
# web框架
actix-web = { workspace = true, features = ["rustls-0_21"] }
# json序列化工具
serde.workspace = true
serde_json.workspace = true
# 日志框架
log.workspace = true
log4rs.workspace = true
# tls集成
openssl = { workspace = true, features = ["vendored"]}
rustls = "0.21"
rustls-pemfile = "1.0"
dotenv.workspace = true
# 错误处理
thiserror.workspace = true
# 数据校验
validator.workspace = true
# 异步
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true
# 命令行参数处理
clap.workspace = true
mockall.workspace = true
lazy_static.workspace = true
serial_test.workspace = true