[package]
name = "plugin_manager"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
log.workspace = true
serde.workspace = true
serde_json.workspace = true
libloading.workspace = true
thiserror.workspace = true
async-trait.workspace = true
[dev-dependencies]
tokio.workspace = true

[features]
test-plugins = []
