[package]
name = "challenge"
version = "0.1.0"
edition = "2021"

[dependencies]
parking_lot.workspace = true
once_cell.workspace = true
log.workspace = true
serde_json.workspace = true
base64.workspace = true
serde = { workspace = true, features = ["derive"] }
reqwest = { workspace = true, features = ["json"] }
config = { path = "../config" }
plugin_manager = { path = "../../plugin_manager" }
tpm_common_attester = { path = "../attester/tpm/common" }
tpm_boot_attester = { path = "../attester/tpm/boot" }
tpm_ima_attester = { path = "../attester/tpm/ima" }
agent_utils = { path = "../utils", features = ["client"] }
openssl.workspace = true

[dev-dependencies]
futures.workspace = true
serial_test.workspace = true
