[package]
name = "schedule_job"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
sea-orm.workspace = true
log.workspace = true
env_logger.workspace = true
serde.workspace = true
serde_json.workspace = true
dotenv.workspace = true
tokio.workspace = true
thiserror.workspace = true
once_cell.workspace = true
async-trait.workspace = true
serde_yaml.workspace = true
log4rs.workspace = true
lazy_static.workspace = true
chrono.workspace = true
redis.workspace = true
parking_lot.workspace = true
cron.workspace = true
walkdir.workspace = true
kafka.workspace = true
cache.workspace = true
env_config_parse.workspace = true