[package]
name = "attestation"
version = "0.1.0"
edition = "2021"

[lib]
#crate-type = ["dylib"]
path = "src/lib.rs"

[dependencies]
validator.workspace = true
serde.workspace = true
plugin_manager.workspace = true
nonce.workspace = true
thiserror.workspace = true
actix-web.workspace = true
serde_json.workspace = true
base64.workspace = true
policy.workspace = true
policy_engine.workspace = true
token_management.workspace = true
common_log.workspace = true
rdb.workspace = true
config_manager.workspace = true
tokio.workspace = true