[package]
name = "nonce"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
rand_chacha.workspace = true
base64.workspace = true
key_management.workspace = true
log.workspace = true
serde.workspace = true
config_manager.workspace = true
tokio.workspace = true
ring.workspace = true
thiserror.workspace = true