[package]
name = "register"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
sea-orm.workspace = true
actix-web.workspace = true
futures-util.workspace = true
thiserror.workspace = true
serde_json.workspace = true
rand.workspace = true
ring.workspace = true
uuid.workspace = true
ratelimit.workspace = true
rdb.workspace = true
serde.workspace = true
base64.workspace = true
common_log.workspace = true
tokio.workspace = true
futures.workspace = true
lazy_static.workspace = true
mockall.workspace = true