[package]
name = "key_management"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "dylib"]
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
lazy_static.workspace = true
tokio.workspace = true
sea-orm.workspace = true
awc.workspace = true
serde.workspace = true
openssl.workspace = true
anyhow.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
ctor.workspace = true
libsm.workspace = true
encoding.workspace = true
base64.workspace = true
mockall.workspace = true
tempfile.workspace = true
serial_test.workspace = true
walkdir.workspace = true
serde_yaml.workspace = true
dotenv.workspace = true
distributed_lock.workspace = true
config_manager.workspace = true
rdb.workspace = true
common_log.workspace = true
env_config_parse.workspace = true