[package]
name = "resource_provider"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[features]
co-deployment = ["endorserment", "policy", "rv"]           # Directly embedded endorserment/policy
independent-deployment = ["awc", "serde"]  # Remote mode dependencies
conflicts = ["co-deployment", "independent-deployment"]

# Add compile-time assertions to ensure mutual exclusivity
[package.metadata]
mutually_exclusive_features = ["co-deployment", "independent-deployment"]

[dependencies]
# Local mode dependencies (enabled by default)
endorserment = { workspace = true, optional = true }
policy = { workspace = true, optional = true }
rv = { workspace = true, optional = true, features = ["mysql_mode"]}
actix-web.workspace = true
sea-orm.workspace = true
serde_json.workspace = true
actix-governor.workspace = true

# Remote mode dependencies (only compiled when independent-deployment is enabled)
awc = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
async-trait.workspace = true
common_log.workspace = true
openssl.workspace = true