[package]
name = "server_config"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
serde = {workspace = true, features = ["derive"]}
serde_yaml.workspace = true
config_manager.workspace = true
env_config_parse.workspace = true
key_management.workspace = true
tokio.workspace = true
mockall.workspace = true
scopeguard.workspace = true
common_log.workspace = true
sea-orm.workspace = true
rdb.workspace = true
plugin_manager.workspace = true
serde_json.workspace = true
endorserment.workspace = true
rv = { workspace = true, features = ["mysql_mode"]}


[features]
rpm_build = []
docker_build = []