[package]
name = "tpm_boot_attester"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "dylib"]

[dependencies]
log.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
thiserror.workspace = true
plugin_manager.workspace = true
tss-esapi.workspace = true
tpm_common_attester = {path = "../common"}