[package]
name = "tpm_boot_verifier"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib", "rlib"]
path = "src/lib.rs"

[dependencies]
tpm_common_verifier = { path = "../common"}
plugin_manager = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
async-trait = { workspace = true }
hex = { workspace = true }
byteorder = { workspace = true }
uuid = { workspace = true }
openssl = { workspace = true }
tokio.workspace = true

[dev-dependencies]
mockall = { workspace = true }
lazy_static = { workspace = true }
tokio = { workspace = true }

