[package]
name = "tpm_dim_verifier"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "dylib"]
path = "src/lib.rs"

[dependencies]
tokio.workspace = true
tpm_common_verifier = { path = "../common"}
plugin_manager = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
once_cell = { workspace = true }
async-trait = { workspace = true }
openssl.workspace = true
hex.workspace = true
thiserror.workspace = true
